// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandRange.parse() parses "" into a hand range 1`] = `
HandRange {
  "map": Map {},
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "7d6h" into a hand range 1`] = `
HandRange {
  "map": Map {
    9663676416 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "7d6h:0.67" into a hand range 1`] = `
HandRange {
  "map": Map {
    9663676416 => 0.67,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "44" into a hand range 1`] = `
HandRange {
  "map": Map {
    3298534883328 => 1,
    5497558138880 => 1,
    9895604649984 => 1,
    6597069766656 => 1,
    10995116277760 => 1,
    13194139533312 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "44:0.44" into a hand range 1`] = `
HandRange {
  "map": Map {
    3298534883328 => 0.44,
    5497558138880 => 0.44,
    9895604649984 => 0.44,
    6597069766656 => 0.44,
    10995116277760 => 0.44,
    13194139533312 => 0.44,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "72o" into a hand range 1`] = `
HandRange {
  "map": Map {
    562950221856768 => 1,
    1125900175278080 => 1,
    2251800082120704 => 1,
    281475513581568 => 1,
    1125900443713536 => 1,
    2251800350556160 => 1,
    281476050452480 => 1,
    562951027163136 => 1,
    2251800887427072 => 1,
    281477124194304 => 1,
    562952100904960 => 1,
    1125902054326272 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "72o:0.27" into a hand range 1`] = `
HandRange {
  "map": Map {
    562950221856768 => 0.27,
    1125900175278080 => 0.27,
    2251800082120704 => 0.27,
    281475513581568 => 0.27,
    1125900443713536 => 0.27,
    2251800350556160 => 0.27,
    281476050452480 => 0.27,
    562951027163136 => 0.27,
    2251800887427072 => 0.27,
    281477124194304 => 0.27,
    562952100904960 => 0.27,
    1125902054326272 => 0.27,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66" into a hand range 1`] = `
HandRange {
  "map": Map {
    50331648 => 1,
    83886080 => 1,
    150994944 => 1,
    100663296 => 1,
    167772160 => 1,
    201326592 => 1,
    805306368 => 1,
    1342177280 => 1,
    2415919104 => 1,
    1610612736 => 1,
    2684354560 => 1,
    3221225472 => 1,
    12884901888 => 1,
    21474836480 => 1,
    38654705664 => 1,
    25769803776 => 1,
    42949672960 => 1,
    51539607552 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66,JJ+,44,AQs-A9s,98o-96o,K8s+,ATo+,44,JTs,72o,AsKs,7d6h" into a hand range 1`] = `
HandRange {
  "map": Map {
    50331648 => 1,
    83886080 => 1,
    150994944 => 1,
    100663296 => 1,
    167772160 => 1,
    201326592 => 1,
    805306368 => 1,
    1342177280 => 1,
    2415919104 => 1,
    1610612736 => 1,
    2684354560 => 1,
    3221225472 => 1,
    12884901888 => 1,
    21474836480 => 1,
    38654705664 => 1,
    25769803776 => 1,
    42949672960 => 1,
    51539607552 => 1,
    3 => 1,
    5 => 1,
    9 => 1,
    6 => 1,
    10 => 1,
    12 => 1,
    48 => 1,
    80 => 1,
    144 => 1,
    96 => 1,
    160 => 1,
    192 => 1,
    768 => 1,
    1280 => 1,
    2304 => 1,
    1536 => 1,
    2560 => 1,
    3072 => 1,
    12288 => 1,
    20480 => 1,
    36864 => 1,
    24576 => 1,
    40960 => 1,
    49152 => 1,
    3298534883328 => 1,
    5497558138880 => 1,
    9895604649984 => 1,
    6597069766656 => 1,
    10995116277760 => 1,
    13194139533312 => 1,
    257 => 1,
    514 => 1,
    1028 => 1,
    2056 => 1,
    4097 => 1,
    8194 => 1,
    16388 => 1,
    32776 => 1,
    65537 => 1,
    131074 => 1,
    262148 => 1,
    524296 => 1,
    1048577 => 1,
    2097154 => 1,
    4194308 => 1,
    8388616 => 1,
    34603008 => 1,
    68157440 => 1,
    135266304 => 1,
    18874368 => 1,
    69206016 => 1,
    136314880 => 1,
    20971520 => 1,
    37748736 => 1,
    138412032 => 1,
    25165824 => 1,
    41943040 => 1,
    75497472 => 1,
    537919488 => 1,
    1074790400 => 1,
    2148532224 => 1,
    270532608 => 1,
    1075838976 => 1,
    2149580800 => 1,
    272629760 => 1,
    541065216 => 1,
    2151677952 => 1,
    276824064 => 1,
    545259520 => 1,
    1082130432 => 1,
    8590983168 => 1,
    17180917760 => 1,
    34360786944 => 1,
    4297064448 => 1,
    17181966336 => 1,
    34361835520 => 1,
    4299161600 => 1,
    8594128896 => 1,
    34363932672 => 1,
    4303355904 => 1,
    8598323200 => 1,
    17188257792 => 1,
    272 => 1,
    544 => 1,
    1088 => 1,
    2176 => 1,
    4112 => 1,
    8224 => 1,
    16448 => 1,
    32896 => 1,
    65552 => 1,
    131104 => 1,
    262208 => 1,
    524416 => 1,
    1048592 => 1,
    2097184 => 1,
    4194368 => 1,
    8388736 => 1,
    16777232 => 1,
    33554464 => 1,
    67108928 => 1,
    134217856 => 1,
    33 => 1,
    65 => 1,
    129 => 1,
    18 => 1,
    66 => 1,
    130 => 1,
    20 => 1,
    36 => 1,
    132 => 1,
    24 => 1,
    40 => 1,
    72 => 1,
    513 => 1,
    1025 => 1,
    2049 => 1,
    258 => 1,
    1026 => 1,
    2050 => 1,
    260 => 1,
    516 => 1,
    2052 => 1,
    264 => 1,
    520 => 1,
    1032 => 1,
    8193 => 1,
    16385 => 1,
    32769 => 1,
    4098 => 1,
    16386 => 1,
    32770 => 1,
    4100 => 1,
    8196 => 1,
    32772 => 1,
    4104 => 1,
    8200 => 1,
    16392 => 1,
    131073 => 1,
    262145 => 1,
    524289 => 1,
    65538 => 1,
    262146 => 1,
    524290 => 1,
    65540 => 1,
    131076 => 1,
    524292 => 1,
    65544 => 1,
    131080 => 1,
    262152 => 1,
    69632 => 1,
    139264 => 1,
    278528 => 1,
    557056 => 1,
    562950221856768 => 1,
    1125900175278080 => 1,
    2251800082120704 => 1,
    281475513581568 => 1,
    1125900443713536 => 1,
    2251800350556160 => 1,
    281476050452480 => 1,
    562951027163136 => 1,
    2251800887427072 => 1,
    281477124194304 => 1,
    562952100904960 => 1,
    1125902054326272 => 1,
    17 => 1,
    9663676416 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66:0.66" into a hand range 1`] = `
HandRange {
  "map": Map {
    50331648 => 0.66,
    83886080 => 0.66,
    150994944 => 0.66,
    100663296 => 0.66,
    167772160 => 0.66,
    201326592 => 0.66,
    805306368 => 0.66,
    1342177280 => 0.66,
    2415919104 => 0.66,
    1610612736 => 0.66,
    2684354560 => 0.66,
    3221225472 => 0.66,
    12884901888 => 0.66,
    21474836480 => 0.66,
    38654705664 => 0.66,
    25769803776 => 0.66,
    42949672960 => 0.66,
    51539607552 => 0.66,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "88-66:0.66,JJ+:0.5,44,AQs-A9s:0.2,98o-96o:0.999,K8s+:0.80,ATo+:1,44:0.44,JTs:0.25,72o:0.27,AsKs:0.4,7d6h:0.67" into a hand range 1`] = `
HandRange {
  "map": Map {
    50331648 => 0.66,
    83886080 => 0.66,
    150994944 => 0.66,
    100663296 => 0.66,
    167772160 => 0.66,
    201326592 => 0.66,
    805306368 => 0.66,
    1342177280 => 0.66,
    2415919104 => 0.66,
    1610612736 => 0.66,
    2684354560 => 0.66,
    3221225472 => 0.66,
    12884901888 => 0.66,
    21474836480 => 0.66,
    38654705664 => 0.66,
    25769803776 => 0.66,
    42949672960 => 0.66,
    51539607552 => 0.66,
    3 => 0.5,
    5 => 0.5,
    9 => 0.5,
    6 => 0.5,
    10 => 0.5,
    12 => 0.5,
    48 => 0.5,
    80 => 0.5,
    144 => 0.5,
    96 => 0.5,
    160 => 0.5,
    192 => 0.5,
    768 => 0.5,
    1280 => 0.5,
    2304 => 0.5,
    1536 => 0.5,
    2560 => 0.5,
    3072 => 0.5,
    12288 => 0.5,
    20480 => 0.5,
    36864 => 0.5,
    24576 => 0.5,
    40960 => 0.5,
    49152 => 0.5,
    3298534883328 => 1,
    5497558138880 => 1,
    9895604649984 => 1,
    6597069766656 => 1,
    10995116277760 => 1,
    13194139533312 => 1,
    257 => 0.2,
    514 => 0.2,
    1028 => 0.2,
    2056 => 0.2,
    4097 => 0.2,
    8194 => 0.2,
    16388 => 0.2,
    32776 => 0.2,
    65537 => 0.2,
    131074 => 0.2,
    262148 => 0.2,
    524296 => 0.2,
    1048577 => 0.2,
    2097154 => 0.2,
    4194308 => 0.2,
    8388616 => 0.2,
    34603008 => 0.999,
    68157440 => 0.999,
    135266304 => 0.999,
    18874368 => 0.999,
    69206016 => 0.999,
    136314880 => 0.999,
    20971520 => 0.999,
    37748736 => 0.999,
    138412032 => 0.999,
    25165824 => 0.999,
    41943040 => 0.999,
    75497472 => 0.999,
    537919488 => 0.999,
    1074790400 => 0.999,
    2148532224 => 0.999,
    270532608 => 0.999,
    1075838976 => 0.999,
    2149580800 => 0.999,
    272629760 => 0.999,
    541065216 => 0.999,
    2151677952 => 0.999,
    276824064 => 0.999,
    545259520 => 0.999,
    1082130432 => 0.999,
    8590983168 => 0.999,
    17180917760 => 0.999,
    34360786944 => 0.999,
    4297064448 => 0.999,
    17181966336 => 0.999,
    34361835520 => 0.999,
    4299161600 => 0.999,
    8594128896 => 0.999,
    34363932672 => 0.999,
    4303355904 => 0.999,
    8598323200 => 0.999,
    17188257792 => 0.999,
    272 => 0.8,
    544 => 0.8,
    1088 => 0.8,
    2176 => 0.8,
    4112 => 0.8,
    8224 => 0.8,
    16448 => 0.8,
    32896 => 0.8,
    65552 => 0.8,
    131104 => 0.8,
    262208 => 0.8,
    524416 => 0.8,
    1048592 => 0.8,
    2097184 => 0.8,
    4194368 => 0.8,
    8388736 => 0.8,
    16777232 => 0.8,
    33554464 => 0.8,
    67108928 => 0.8,
    134217856 => 0.8,
    33 => 1,
    65 => 1,
    129 => 1,
    18 => 1,
    66 => 1,
    130 => 1,
    20 => 1,
    36 => 1,
    132 => 1,
    24 => 1,
    40 => 1,
    72 => 1,
    513 => 1,
    1025 => 1,
    2049 => 1,
    258 => 1,
    1026 => 1,
    2050 => 1,
    260 => 1,
    516 => 1,
    2052 => 1,
    264 => 1,
    520 => 1,
    1032 => 1,
    8193 => 1,
    16385 => 1,
    32769 => 1,
    4098 => 1,
    16386 => 1,
    32770 => 1,
    4100 => 1,
    8196 => 1,
    32772 => 1,
    4104 => 1,
    8200 => 1,
    16392 => 1,
    131073 => 1,
    262145 => 1,
    524289 => 1,
    65538 => 1,
    262146 => 1,
    524290 => 1,
    65540 => 1,
    131076 => 1,
    524292 => 1,
    65544 => 1,
    131080 => 1,
    262152 => 1,
    69632 => 0.25,
    139264 => 0.25,
    278528 => 0.25,
    557056 => 0.25,
    562950221856768 => 0.27,
    1125900175278080 => 0.27,
    2251800082120704 => 0.27,
    281475513581568 => 0.27,
    1125900443713536 => 0.27,
    2251800350556160 => 0.27,
    281476050452480 => 0.27,
    562951027163136 => 0.27,
    2251800887427072 => 0.27,
    281477124194304 => 0.27,
    562952100904960 => 0.27,
    1125902054326272 => 0.27,
    17 => 0.4,
    9663676416 => 0.67,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "98o-96o" into a hand range 1`] = `
HandRange {
  "map": Map {
    34603008 => 1,
    68157440 => 1,
    135266304 => 1,
    18874368 => 1,
    69206016 => 1,
    136314880 => 1,
    20971520 => 1,
    37748736 => 1,
    138412032 => 1,
    25165824 => 1,
    41943040 => 1,
    75497472 => 1,
    537919488 => 1,
    1074790400 => 1,
    2148532224 => 1,
    270532608 => 1,
    1075838976 => 1,
    2149580800 => 1,
    272629760 => 1,
    541065216 => 1,
    2151677952 => 1,
    276824064 => 1,
    545259520 => 1,
    1082130432 => 1,
    8590983168 => 1,
    17180917760 => 1,
    34360786944 => 1,
    4297064448 => 1,
    17181966336 => 1,
    34361835520 => 1,
    4299161600 => 1,
    8594128896 => 1,
    34363932672 => 1,
    4303355904 => 1,
    8598323200 => 1,
    17188257792 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "98o-96o:0.999" into a hand range 1`] = `
HandRange {
  "map": Map {
    34603008 => 0.999,
    68157440 => 0.999,
    135266304 => 0.999,
    18874368 => 0.999,
    69206016 => 0.999,
    136314880 => 0.999,
    20971520 => 0.999,
    37748736 => 0.999,
    138412032 => 0.999,
    25165824 => 0.999,
    41943040 => 0.999,
    75497472 => 0.999,
    537919488 => 0.999,
    1074790400 => 0.999,
    2148532224 => 0.999,
    270532608 => 0.999,
    1075838976 => 0.999,
    2149580800 => 0.999,
    272629760 => 0.999,
    541065216 => 0.999,
    2151677952 => 0.999,
    276824064 => 0.999,
    545259520 => 0.999,
    1082130432 => 0.999,
    8590983168 => 0.999,
    17180917760 => 0.999,
    34360786944 => 0.999,
    4297064448 => 0.999,
    17181966336 => 0.999,
    34361835520 => 0.999,
    4299161600 => 0.999,
    8594128896 => 0.999,
    34363932672 => 0.999,
    4303355904 => 0.999,
    8598323200 => 0.999,
    17188257792 => 0.999,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AQs-A9s" into a hand range 1`] = `
HandRange {
  "map": Map {
    257 => 1,
    514 => 1,
    1028 => 1,
    2056 => 1,
    4097 => 1,
    8194 => 1,
    16388 => 1,
    32776 => 1,
    65537 => 1,
    131074 => 1,
    262148 => 1,
    524296 => 1,
    1048577 => 1,
    2097154 => 1,
    4194308 => 1,
    8388616 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AQs-A9s:0.2" into a hand range 1`] = `
HandRange {
  "map": Map {
    257 => 0.2,
    514 => 0.2,
    1028 => 0.2,
    2056 => 0.2,
    4097 => 0.2,
    8194 => 0.2,
    16388 => 0.2,
    32776 => 0.2,
    65537 => 0.2,
    131074 => 0.2,
    262148 => 0.2,
    524296 => 0.2,
    1048577 => 0.2,
    2097154 => 0.2,
    4194308 => 0.2,
    8388616 => 0.2,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "ATo+" into a hand range 1`] = `
HandRange {
  "map": Map {
    33 => 1,
    65 => 1,
    129 => 1,
    18 => 1,
    66 => 1,
    130 => 1,
    20 => 1,
    36 => 1,
    132 => 1,
    24 => 1,
    40 => 1,
    72 => 1,
    513 => 1,
    1025 => 1,
    2049 => 1,
    258 => 1,
    1026 => 1,
    2050 => 1,
    260 => 1,
    516 => 1,
    2052 => 1,
    264 => 1,
    520 => 1,
    1032 => 1,
    8193 => 1,
    16385 => 1,
    32769 => 1,
    4098 => 1,
    16386 => 1,
    32770 => 1,
    4100 => 1,
    8196 => 1,
    32772 => 1,
    4104 => 1,
    8200 => 1,
    16392 => 1,
    131073 => 1,
    262145 => 1,
    524289 => 1,
    65538 => 1,
    262146 => 1,
    524290 => 1,
    65540 => 1,
    131076 => 1,
    524292 => 1,
    65544 => 1,
    131080 => 1,
    262152 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "ATo+:1" into a hand range 1`] = `
HandRange {
  "map": Map {
    33 => 1,
    65 => 1,
    129 => 1,
    18 => 1,
    66 => 1,
    130 => 1,
    20 => 1,
    36 => 1,
    132 => 1,
    24 => 1,
    40 => 1,
    72 => 1,
    513 => 1,
    1025 => 1,
    2049 => 1,
    258 => 1,
    1026 => 1,
    2050 => 1,
    260 => 1,
    516 => 1,
    2052 => 1,
    264 => 1,
    520 => 1,
    1032 => 1,
    8193 => 1,
    16385 => 1,
    32769 => 1,
    4098 => 1,
    16386 => 1,
    32770 => 1,
    4100 => 1,
    8196 => 1,
    32772 => 1,
    4104 => 1,
    8200 => 1,
    16392 => 1,
    131073 => 1,
    262145 => 1,
    524289 => 1,
    65538 => 1,
    262146 => 1,
    524290 => 1,
    65540 => 1,
    131076 => 1,
    524292 => 1,
    65544 => 1,
    131080 => 1,
    262152 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AsKs" into a hand range 1`] = `
HandRange {
  "map": Map {
    17 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "AsKs:0.4" into a hand range 1`] = `
HandRange {
  "map": Map {
    17 => 0.4,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JJ+" into a hand range 1`] = `
HandRange {
  "map": Map {
    3 => 1,
    5 => 1,
    9 => 1,
    6 => 1,
    10 => 1,
    12 => 1,
    48 => 1,
    80 => 1,
    144 => 1,
    96 => 1,
    160 => 1,
    192 => 1,
    768 => 1,
    1280 => 1,
    2304 => 1,
    1536 => 1,
    2560 => 1,
    3072 => 1,
    12288 => 1,
    20480 => 1,
    36864 => 1,
    24576 => 1,
    40960 => 1,
    49152 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JJ+:0.5" into a hand range 1`] = `
HandRange {
  "map": Map {
    3 => 0.5,
    5 => 0.5,
    9 => 0.5,
    6 => 0.5,
    10 => 0.5,
    12 => 0.5,
    48 => 0.5,
    80 => 0.5,
    144 => 0.5,
    96 => 0.5,
    160 => 0.5,
    192 => 0.5,
    768 => 0.5,
    1280 => 0.5,
    2304 => 0.5,
    1536 => 0.5,
    2560 => 0.5,
    3072 => 0.5,
    12288 => 0.5,
    20480 => 0.5,
    36864 => 0.5,
    24576 => 0.5,
    40960 => 0.5,
    49152 => 0.5,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JTs" into a hand range 1`] = `
HandRange {
  "map": Map {
    69632 => 1,
    139264 => 1,
    278528 => 1,
    557056 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "JTs:0.25" into a hand range 1`] = `
HandRange {
  "map": Map {
    69632 => 0.25,
    139264 => 0.25,
    278528 => 0.25,
    557056 => 0.25,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "K8s+" into a hand range 1`] = `
HandRange {
  "map": Map {
    272 => 1,
    544 => 1,
    1088 => 1,
    2176 => 1,
    4112 => 1,
    8224 => 1,
    16448 => 1,
    32896 => 1,
    65552 => 1,
    131104 => 1,
    262208 => 1,
    524416 => 1,
    1048592 => 1,
    2097184 => 1,
    4194368 => 1,
    8388736 => 1,
    16777232 => 1,
    33554464 => 1,
    67108928 => 1,
    134217856 => 1,
  },
  "memoizedRankPairs": null,
}
`;

exports[`HandRange.parse() parses "K8s+:0.80" into a hand range 1`] = `
HandRange {
  "map": Map {
    272 => 0.8,
    544 => 0.8,
    1088 => 0.8,
    2176 => 0.8,
    4112 => 0.8,
    8224 => 0.8,
    16448 => 0.8,
    32896 => 0.8,
    65552 => 0.8,
    131104 => 0.8,
    262208 => 0.8,
    524416 => 0.8,
    1048592 => 0.8,
    2097184 => 0.8,
    4194368 => 0.8,
    8388736 => 0.8,
    16777232 => 0.8,
    33554464 => 0.8,
    67108928 => 0.8,
    134217856 => 0.8,
  },
  "memoizedRankPairs": null,
}
`;
